# nestipy

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  REVERSE_ENGINEERING.md  bench.py  bench_compare.py  doc_metier.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  prometheus.yaml  pyproject.toml  requirements.txt  roadmap.md
.github/workflow/: constraints.txt  pre-release.yml  release.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml
docs/: 404.html  index.html  index.md
docs/cli/: index.html
docs/dynamic/: index.html
docs/gateway/: index.html
docs/overrides/: main.html
docs/plugin/: index.html
docs/search/: search_index.json
docs/start/: index.html
docs/stylesheets/: extra.css
docs/util/: index.html
docs_src/: index.md
docs_src/.vitepress/: config.mts
docs_src/fundamental/: build-module.md
docs_src/graphql/: mutation.md
docs_src/microservice/: grpc.md  mqtt.md  overview.md  rabbitmq.md
docs_src/openapi/: start.md
docs_src/overview/: controller.md  custom-decorator.md  first-step.md  guard.md  interceptor.md  internal-architecture.md  middleware.md  module.md  provider.md  scopes-pipes-lifecycle.md  web.md
docs_src/recipes/: auth-guards-pipes-openapi.md
docs_src/stylesheets/: extra.css
docs_src/technique/: configuration.md  event.md  health.md  inertia.md
docs_src/web/: actions.md  cli.md  components.md  environment.md  getting-started.md  index.md  production.md  routing-layouts.md  ssr.md  troubleshooting.md  typed-clients.md
example/: app_command.py  app_controller.py  app_module.py  app_provider.py  cli.py  deps.json  main.py  nestipy_voirie_csv (1).csv  not_found.py
example/clients/: api_client.py  api_client.ts
example/tests/: test1.py  test2.py
example/user/: user_controller.py  user_gateway.py  user_guards.py  user_module.py  user_resolver.py  user_service.py
example/views/: index.html
example_ms1/: README.md  app_controller.py  app_module.py  main.py  requirements.txt  test.py
example_ms2/: .gitignore  app_controller.py  app_module.py  app_service.py  main.py
exemple/: .env  app_controller.py  app_middleware.py  app_module.py  app_service.py  main.py  test.py
exemple/config/: masonite_orm.py  peewee.py
exemple/templates/: index.html
fullstack-app/: .gitignore  README.md  app_actions.py  app_controller.py  app_module.py  app_service.py  docker-compose.yml  main.py
fullstack-app/app/: actions.py  error.py  layout.py  notfound.py  page.py  state.py
fullstack-app/web/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
myapp/: Dockerfile  README.md  app_controller.py  app_module.py  main.py  pyproject.toml
myapp/app/: error.py  layout.py  notfound.py  page.py  store.py
myapp/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: benchmark.sh  coverage.sh  fetch_devtools_vendor.sh  generate_web_ui_stub.py
site/: cli.md  dynamic.md  gateway.md  index.md  plugin.md  start.md  util.md
site/fundamental/: custom-provider.md  di-request-scope.md  dynamic-module.md  execution-context.md  lifecycle-event.md  testing.md
site/graphql/: quick-start.md  resolver.md  subscription.md
site/microservice/: grpc.md  mqtt.md  nats.md  (+3 more)
tests/: annotation.py  injectable.py  main.py  regex.py  template.py
(+648 files in other folders)
