[tool.poetry]
name = "nestipy"
version = "0.4.9"
description = "Nestipy is a Python framework built on top of BlackSheep that follows the modular architecture of NestJS"
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"
packages = [{ include = "nestipy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pyee = "^11.1.0"
snakecase = "^1.0.1"
python-socketio = "^5.11.1"
blacksheep = "^2.0.7"
aiofiles = "^23.2.1"
fastapi = "^0.110.0"
strawberry-graphql = "^0.225.0"
ujson = "^5.9.0"
minijinja = "^2.0.1"
python-multipart = "^0.0.9"
multipart = "^0.2.4"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

