[tool.poetry]
name = "nestipy"
version = "0.6.3"
description = "Nestipy is a Python framework built on top of BlackSheep that follows the modular architecture of NestJS"
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"
packages = [{ include = "nestipy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pyee = "^12.1.1"
snakecase = "^1.0.1"
python-socketio = "^5.11.1"
aiofiles = "^24.1.0"
strawberry-graphql = "^0.250.0"
ujson = "^5.9.0"
minijinja = "^2.5.0"
rich = "^13.9.4"
dataclasses-json = "^0.6.7"
jinja2 = "^3.1.4"
fastapi = "^0.115.0"
httpx = "^0.27.2"
python-multipart = "^0.0.17"
itsdangerous = "^2.2.0"
essentials = "^1.1.5"
pyyaml = "^6.0.2"
async-timeout = "^5.0.1"
chardet = "^5.2.0"
nats-py = "^2.9.0"
aiomqtt = "^2.3.0"
redis = "^5.2.0"
aio-pika = "^9.4.3"

[tool.poetry.extras]
blacksheep = ["blacksheep"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
