[project]
name = "nestipy"
version = "0.7.5"
description = "Nestipy is a Python framework built on top of BlackSheep that follows the modular architecture of NestJS"
authors = [{ name = "tsiresymila", email = "tsiresymila@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "pyee>=12.1.1,<13",
    "snakecase>=1.0.1,<2",
    "python-socketio>=5.11.1,<6",
    "aiofiles>=24.1.0,<25",
    "ujson>=5.9.0,<6",
    "minijinja>=2.5.0,<3",
    "rich>=14.1.0,<15",
    "dataclasses-json>=0.6.7,<0.7",
    "jinja2>=3.1.4,<4",
    "httpx>=0.27.2,<0.28",
    "python-multipart>=0.0.17,<0.0.18",
    "itsdangerous>=2.2.0,<3",
    "essentials>=1.1.5,<2",
    "pyyaml>=6.0.2,<7",
    "async-timeout>=5.0.1,<6",
    "chardet>=5.2.0,<6",
    "nats-py>=2.9.0,<3",
    "aiomqtt>=2.3.0,<3",
    "redis>=5.2.0,<6",
    "aio-pika>=9.4.3,<10",
    "asyncclick>=8.1.7.2,<9",
    "click>=8.1.7,<9",
    "grpcio>=1.74.0,<2",
    "grpcio-tools>=1.74.0,<2",
    "strawberry-graphql>=0.278.0",
    "fastapi>=0.116.1",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
blacksheep = []

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-coverage>=0.0,<0.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/nestipy"]

[tool.hatch.build.targets.wheel]
include = ["src/nestipy"]

[tool.hatch.build.targets.wheel.sources]
"src/nestipy" = "nestipy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

